--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,9 @@ tasks:
       docker pull solr:8.11.2
       docker run -d --name=solr-server \
         -p 8983:8983 solr:8.11.2
+      pip3 install pysolr
+      pip3 install ipython
+      git clone https://github.com/prust/wikipedia-movie-data.git
     command: docker start solr-server
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
