--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@
 tasks:
   - init: |
       docker pull solr:8.11.2
-      # docker run -d -p 8983:8983 --name my_solr solr solr-precreate my_core
-      docker run -d -p 8983:8983 --name my_solr -v $PWD/config/solr:/my_core_config/conf solr:8 solr-precreate my_core /my_core_config
+      mkdir -p solr-data
+      docker run -d -p 8983:8983 --name my_solr solr solr-precreate my_core
       pip3 install pysolr
       pip3 install ipython
       git clone https://github.com/prust/wikipedia-movie-data.git
