--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,8 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: |
-      docker pull solr:8.11.2
       mkdir -p solr-data
-      # docker run -d -p 8983:8983 --name my_solr solr solr-precreate my_core
-      sudo chown 8983:8983 solr-data  # necessary on Linux, not Mac.
+      sudo chown 8983:8983 solr-data  
       docker run -d -v "$PWD/solr-data:/var/solr" -p 8983:8983 --name my_solr solr:8 solr-precreate my_core
       pip3 install pysolr
       pip3 install ipython
